2006-07-19  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-master.c
	- Fixed a type which prevent the preview window from beeing shown
	- Fixed restoring of splitter positions

2006-07-08  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-master.c:
	* gdl/gdl-dock-placeholder.c:
	
	Make Gdl able to restore "floating" docks

2006-06-13  Johannes Schmid <jhs@cvs.gnome.org>
	
	* configure.in: Fixed configure script (#344678)

2006-06-01  Johannes Schmid <jhs@cvs.gnome.org>

	* autogen.sh:
	* configure.in:
	* gdl/Makefile.am:
	* gdl/gdl-dock-master.c:
	* gdl/gdl-dock.c:
	* gdl/gdl-stock.c:
	* gdl/gdl-tools.h:
	* gdl/gdl.h:

	* gdl/gdl-recent.c:
	* gdl/gdl-recent.h:
	Removed: Use GtkRecent instead

	Merged gdl-gtk to HEAD

2006-05-25  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-item.c, gdl/gdl-dock-placeholder.c:
	Added width and height properties for placeholer
	and restore the dock item dimension when they are attached to
	the placeholder. Set placeholder width/height when items are
	hidden. Prevent placeholders to lose their hosts when the dock
	is reduced to the the root.
	
	* gdl/gdl-dock-notebook.c: Set the newly docked widget to
	current page.

2006-05-19  Naba Kumar  <naba@gnome.org>

	* gdl/Makefile.am, gdl/gdl-dock-bar.c, gdl/gdl-dock-bar.h,
	gdl/test-dock.c: Added dockbar buttons style (icons/text/both/auto).

=== GDL 0.6.1 ===

2005-10-15  Naba Kumar  <naba@gnome.org>

	* NEWS: More updates.
	
2006-05-12  Johannes Schmid <jhs@cvs.gnome.org>
	
	* NEWS, MAINTAINERS: Updated

2006-06-01  Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/Makefile.am: Fixed
	* autogen.sh: Changed from AM_PROG_LIBTOOL to AC_PROG_LIBTOOL

2006-06-01  Robert Staudinger <robert.staudinger@gmail.com>

	* gdl/Makefile.am:
	Some build fixes for mingw 
	* gdl/gdl-stock.h:
	Load stock icons correctly even if not in installation path
