@@ -73,15 +73,9 @@ AC_SUBST(XML_LIBS)
 
 PKG_CHECK_MODULES(GDL_DEPENDENCIES, 
 	gtk+-2.0 >= $GTK_REQUIRED 
-	libgnomeui-2.0 >= $GNOME_REQUIRED
-	libbonoboui-2.0 >= $BONOBOUI_REQUIRED
 	libglade-2.0 >= $LIBGLADE_REQUIRED)
 AC_SUBST(GDL_DEPENDENCIES_CFLAGS)
 AC_SUBST(GDL_DEPENDENCIES_LIBS)
-
-PKG_CHECK_MODULES(XML, libxml-2.0 >= $XML_REQUIRED)
-AC_SUBST(XML_CFLAGS)
-AC_SUBST(XML_LIBS)
 
 dnl ****************
 dnl GNOME Libraries
@@ -110,7 +104,6 @@ else
 		[gnome="no"])
 	AC_SUBST(GNOME_CFLAGS)
 	AC_SUBST(GNOME_LIBS)
-	AC_MSG_RESULT([$gnome])
 fi
 
 AM_CONDITIONAL(HAVE_GNOME, [test x$gnome = xyes])
